--- a/supercar.html
+++ b/supercar.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supercar manegement </title>
     <link rel="stylesheet" href="supercar.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -46,6 +48,10 @@
             </div>
             <div class="header2">
                 <p>Sản Phẩm</p>
+            </div>
+            <div class="search-bar">
+                <input type="text" class="search" placeholder="Nhập vào đây để tìm kiếm..." oninput="productSearch()">
+                <i class="bi bi-search"></i>
             </div>
         </div>
     </div>
