--- a/supercar.html
+++ b/supercar.html
@@ -50,7 +50,8 @@
                 <p>Sản Phẩm</p>
             </div>
             <div class="search-bar">
-                <input type="text" class="search" placeholder="Nhập vào đây để tìm kiếm..." oninput="productSearch()">
+                <input type="text" class="search" placeholder="Nhập vào đây để tìm kiếm..." oninput="search()"
+                    id="searchProduct">
                 <i class="bi bi-search"></i>
             </div>
         </div>
@@ -60,7 +61,7 @@
             <label for="addName">Nhập tên sản phẩm muốn thêm:</label>
             <input type="text" id="addName">
             <label for="addPrice">Nhập giá sản phẩm muốn thêm:</label>
-            <input type="number" id="addPrice">
+            <input type="number" id="addPrice" min=1 oninput="validity.valid||(value='');">
             <label for="addImage">Nhập hình ảnh sản phẩm muốn thêm:</label>
             <input type="url" id="addImage">
         </div>
@@ -92,6 +93,7 @@
     </div>
     <script src="supercar.js">
     </script>
+
 </body>
 
 </html>
